Jenny's Salon Brand

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <!-- Header -->
   <header class="main-header">
-    <div class="brand">Jenny Beauty & Spa</div>
+    <div class="brand">Jenny's Salon</div>
     <nav class="nav-tabs">
       <a href="#">Home</a>
       <div class="dropdown">
