--- a/men section.html
+++ b/men section.html
@@ -110,7 +110,7 @@
 <body>
   <!-- Header -->
   <header class="main-header">
-    <div class="brand">BLANK</div>
+    <div class="brand">Jenny's Salon</div>
     <nav class="nav-tabs">
       <a href="index.html">Home</a>
       <div class="dropdown">
