--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>BLANK | Home</title>
+  <title>Jenny's Salon | Home</title>
   <link rel="stylesheet" href="BeautySalonCSS.css">
   <!-- Swiper.js Carousel Library CSS -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
