--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>BLANK | Contact Us</title>
+  <title>Jenny's Salon | Contact Us</title>
   <link rel="stylesheet" href="BeautySalonCSS.css">
   <style>
     body {
@@ -82,7 +82,7 @@
 <body>
   <!-- Header -->
   <header class="main-header">
-    <div class="brand">BLANK</div>
+    <div class="brand">Jenny's Salon</div>
     <nav class="nav-tabs">
         <nav class="nav-tabs">
       <a href="index.html">Home</a>
