--- a/eyelash extension.html
+++ b/eyelash extension.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>BLANK | Eyelash Extension</title>
+  <title>Jenny's Salon | Eyelash Extension</title>
   <link rel="stylesheet" href="BeautySalonCSS.css">
   <!-- Link to the Oswald font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -110,7 +110,7 @@
 <body>
   <!-- Header -->
   <header class="main-header">
-    <div class="brand">BLANK</div>
+    <div class="brand">Jenny's Salon</div>
     <nav class="nav-tabs">
       <a href="index.html">Home</a>
       <div class="dropdown">
