--- a/men section.html
+++ b/men section.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>BLANK | Men Section</title>
+  <title>Jenny's Salon | Men Section</title>
   <link rel="stylesheet" href="BeautySalonCSS.css">
   <!-- Link to the Oswald font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
