--- a/facial treatment.html
+++ b/facial treatment.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Jenny's Salon | Facial Treatment</title>
+  <title>Beauty Lashes & Brows | Facial Treatment</title>
   <link rel="stylesheet" href="BeautySalonCSS.css">
   <!-- Link to the Oswald font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -110,7 +110,7 @@
 <body>
   <!-- Header -->
   <header class="main-header">
-    <div class="brand">Jenny's Salon</div>
+    <div class="brand">Beauty Lashes & Brows</div>
     <nav class="nav-tabs">
       <a href="index.html">Home</a>
       <div class="dropdown">
@@ -190,7 +190,7 @@
   <footer class="footer">
   <div class="footer-container" style="display: flex; justify-content: space-between; align-items: flex-start; flex-wrap: wrap; max-width: 1200px; margin: 0 auto; gap: 2em; padding: 2em;">
     <div class="footer-contact" style="flex: 1 1 300px; min-width: 280px;">
-      <h2>BLANK</h2>
+      <h2>Beauty Lashes & Brows</h2>
       <h3>Location</h3>
       <p>Aehrenweg 4<br>8405 Winterthur, Switzerland</p>
       <h3>Contact Us</h3>
