--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Jenny's Salon | Home</title>
+  <title>Beauty Lashes & Brows | Home</title>
   <link rel="stylesheet" href="BeautySalonCSS.css">
   <!-- Swiper.js Carousel Library CSS -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
@@ -19,7 +19,7 @@
 <body>
   <!-- Header -->
   <header class="main-header">
-    <div class="brand">Jenny's Salon</div>
+    <div class="brand">Beauty Lashes & Brows</div>
     <nav class="nav-tabs">
       <a href="#">Home</a>
       <div class="dropdown">
@@ -88,7 +88,7 @@
   <footer class="footer">
   <div class="footer-container" style="display: flex; justify-content: space-between; align-items: flex-start; flex-wrap: wrap; max-width: 1200px; margin: 0 auto; gap: 2em; padding: 2em;">
     <div class="footer-contact" style="flex: 1 1 300px; min-width: 280px;">
-      <h2>BLANK</h2>
+      <h2>Beauty Lashes & Brows</h2>
       <h3>Location</h3>
       <p>Aehrenweg 4<br>8405 Winterthur, Switzerland</p>
       <h3>Contact Us</h3>
