description box in eyelash extension

--- a/eyelash extension.html
+++ b/eyelash extension.html
@@ -131,14 +131,24 @@
   <section class="services-catalog">
     <div class="description-box">
       <h2 style="font-size: 1.5em;">Eyelash Extension:</h2>
-      <p style="text-align: justify">Lorem ipsum dolor sit amet. Aut sunt sint aut 
-        quis accusamus eum galisum saepe sed internos quas. 
-        Nam soluta molestiae in similique veritatis At omnis 
-        cupiditate quo omnis assumenda ut obcaecati laudantium 
-        sed molestiae nihil et nulla ratione. Eos voluptates magnam 
-        non numquam tempore ut consequuntur laborum. Qui accusamus 
-        eaque et laboriosam excepturi et reiciendis doloremque cum 
-        eius alias aut aspernatur excepturi.</p>
+      <p style="text-align: justify">We specialize in eyelash extensions 
+        that enhance your natural beauty with precision and care. Our range of 
+        styles from natural and hybrid to full glamour, which are expertly tailored to 
+        complement your unique eye shape and personal style.
+        <br>
+        <br>
+        In addition, we offer advanced lash lifting treatments to give your natural lashes 
+        a lasting curl and lift, creating a refreshed and polished look.
+        <br>
+        <br>
+        Our skilled technicians use only the highest quality products, 
+        ensuring both the health and durability of your lashes. We prioritize 
+        a comfortable, safe, and personalized experience from your initial consultation 
+        through to the final application.
+        <br>
+        <br>
+        Discover the perfect lash look designed just for you.
+      </p>
     </div> 
     <div class="services-list">
       <div class="service-card-catalog" style="--service-img: url('#')">
