--- a/eyelash extension.html
+++ b/eyelash extension.html
@@ -133,7 +133,7 @@
       <h2 style="font-size: 1.5em;">Eyelash Extension:</h2>
       <p style="text-align: justify">We specialize in eyelash extensions 
         that enhance your natural beauty with precision and care. Our range of 
-        styles from natural and hybrid to full glamour, which are expertly tailored to 
+        styles from natural to hybrid to full glamour, which are expertly tailored to 
         complement your unique eye shape and personal style.
         <br>
         <br>
