--- a/eyelash extension.html
+++ b/eyelash extension.html
@@ -222,10 +222,8 @@
           without overpowering their natural beauty. Ideal for everyday wear, 
           this style suits clients seeking a soft, elegant look with gentle 
           length and volume. 
-          <br>
-          <br>
-          CHF.- 120
-          <br></p>
+          </p>
+          <p style="text-align: center">CHF.- 120</p>
         <button id="closeModal1">Close</button>
       </div>
     </div>
@@ -237,10 +235,8 @@
           occasions or anyone who loves a dramatic, ful-volume look, these lashes add 
           significant length and thickness for captivating eyes. Tailored to enhance 
           your unique eye shape, this style delivers undeniable allure and elegance.
-          <br>
-          <br>
-          CHF.- 120
-          <br></p>
+        </p>
+        <p style="text-align: center">CHF.- 120</p>
         <button id="closeModal2">Close</button>
       </div>
     </div>
@@ -253,10 +249,8 @@
           This versatile style is perfect for clients who want a fuller appearance 
           without the extreme volume of our Glamour Lash. Ideal for those seeking 
           a balanced, yet striking enhancement that suits any occasion.
-          <br>
-          <br>
-          CHF.- 170
         </p>
+        <p style="text-align: center">CHF.- 170</p>
         <button id="closeModal3">Close</button>
       </div>
     </div>
@@ -269,10 +263,8 @@
           fuller, darker lashes without the daily application of mascara. Ideal
           for a polished, everyday look, these lashes offer a subtle boost to 
           your natural beauty.
-          <br>
-          <br>
-          CHF.- 150
-        </p>
+         </p>
+        <p style="text-align: center">CHF.- 150</p>
         <button id="closeModal4">Close</button>
       </div>
     </div>
@@ -285,10 +277,8 @@
           extensions. This treatment is perfect for those who want to enhance their 
           natural lashes with a long-lasting curl that opens up the eyes and adds 
           definition.
-          <br>
-          <br>
-          CHF.- 120
         </p>
+        <p style="text-align: center">CHF.- 120</p>
         <button id="closeModal5">Close</button>
       </div>
     </div>
