men grooming illustration index page

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h3>Eyebrow Permanent Makeup</h3>
         <a href="eyebrow permanent makeup.hmtl" class="service-link">More Information</a>
       </div>
-      <div class="service-card" style="--service-img: url('menIllustration.png')">
+      <div class="service-card" style="--service-img: url('menIllustration.jpg')">
         <h3>Man Grooming</h3>
         <a href="man grooming.html" class="service-link">More Information</a>
       </div>
