minor changes in main page

--- a/index.html
+++ b/index.html
@@ -50,15 +50,19 @@
   <!-- Services Section -->
   <section class="services">
     <div class="description-box">
-      <h2 style="font-size: 1.5em;">What we offer:</h2>
-      <p style="text-align: justify">Lorem ipsum dolor sit amet. Aut sunt sint aut 
-        quis accusamus eum galisum saepe sed internos quas. 
-        Nam soluta molestiae in similique veritatis At omnis 
-        cupiditate quo omnis assumenda ut obcaecati laudantium 
-        sed molestiae nihil et nulla ratione. Eos voluptates magnam 
-        non numquam tempore ut consequuntur laborum. Qui accusamus 
-        eaque et laboriosam excepturi et reiciendis doloremque cum 
-        eius alias aut aspernatur excepturi.</p>
+      <h2 style="font-size: 1.5em;">Welcome to Beauty Lashes and Brows, </h2>
+      <p >Where beauty treatments meet the highest
+        standards of quality and care. We offer a full range of services for 
+        both men and women, including variety facial treatments, eyelash extensions 
+        applications, eyebrow permanent makeup, and waxing. 
+        <br><br>
+        We are committed to providing our clients excellence by only choosing to 
+        use premium products such as Dermalogica alongside our own carefully prepared 
+        natural wax to ensure safe, effective treatments.
+        <br><br>
+        Our salon is open Monday through Saturday, from 9:00 AM to 7:00 PM, ready to
+        provide you with a relaxing and personalized experience.
+      </p>
     </div> 
     <div class="services-list">
       <div class="service-card" style="--service-img: url('facialIllustration.png')">
