eyelash banner added

--- a/eyelash extension.html
+++ b/eyelash extension.html
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
   <style>
     body{
-      background-image: url('facialtreatmentbackground.png');
+      background-image: url('eyelashBanner.png');
       background-repeat: no-repeat;
       background-attachment: scroll;
       background-position: top; 
