add description facial

--- a/facial treatment.html
+++ b/facial treatment.html
@@ -131,14 +131,17 @@
   <section class="services-catalog">
     <div class="description-box">
       <h2 style="font-size: 1.5em;">Facial Treatment:</h2>
-      <p style="text-align: justify">Lorem ipsum dolor sit amet. Aut sunt sint aut 
-        quis accusamus eum galisum saepe sed internos quas. 
-        Nam soluta molestiae in similique veritatis At omnis 
-        cupiditate quo omnis assumenda ut obcaecati laudantium 
-        sed molestiae nihil et nulla ratione. Eos voluptates magnam 
-        non numquam tempore ut consequuntur laborum. Qui accusamus 
-        eaque et laboriosam excepturi et reiciendis doloremque cum 
-        eius alias aut aspernatur excepturi.</p>
+      <p style="text-align: justify">Our effective treatments are thoughtfully 
+        formulated to address your skin’s unique needs—from detoxifying and 
+        brightening to hydrating and anti-aging—helping you achieve optimal skin health.
+        <br><br>
+        <b>Dermalogica Facial Benefits</b>
+        <br><br>
+        Experience the transformative benefits of a Dermalogica facial, which offers 
+        personalized care tailored to your specific skin concerns. Our highly trained 
+        professionals use a systematic approach, including Face Mapping analysis, to 
+        customize every step of the treatment. The result is a radiant, deeply hydrated 
+        complexion designed to enhance your natural beauty.</p>
     </div> 
     <div class="services-list">
       <div class="service-card-catalog" style="--service-img: url('#')">
