facial treatment page update

--- a/facial treatment.html
+++ b/facial treatment.html
@@ -63,6 +63,7 @@
       opacity: 0;
       transition: all 0.3s ease-in-out;
       z-index: -1;
+      color: black;
 
       display: flex;
       justify-content: center;
@@ -78,6 +79,7 @@
       opacity: 0;
       transition: all 0.3s ease-in-out;
       z-index: -1;
+      color: black;
 
       display: flex;
       justify-content: center;
@@ -145,11 +147,11 @@
     </div> 
     <div class="services-list">
       <div class="service-card-catalog" style="--service-img: url('#')">
-        <h3>Treatment 1</h3>
+        <h3>Anti-Aging and Renewal Treatment</h3>
         <button class="service-link-catalog" id="openModal1">More About This Product</button>
       </div>
       <div class="service-card-catalog" style="--service-img: url('#')">
-        <h3>Treatment 2</h3>
+        <h3>Serenity Skin Repair Treatment</h3>
         <button class="service-link-catalog" id="openModal2">More About This Product</button>
       </div>
       <div class="service-card-catalog" style="--service-img: url('#')">
@@ -159,23 +161,22 @@
     </div>
     <div class="modal1" id="modal1">
       <div class="modalContent">
-        <h3>Treatment 1</h3>
-        <p style="text-align: justify">Lorem ipsum dolor sit amet. Aut sunt sint aut 
-        quis accusamus eum galisum saepe sed internos quas. 
-        Nam soluta molestiae in similique veritatis At omnis 
-        cupiditate quo omnis assumenda ut obcaecati laudantium 
-        sed molestiae nihil et nulla ratione. Eos voluptates magnam 
-        non numquam tempore ut consequuntur laborum. Qui accusamus 
-        eaque et laboriosam excepturi et reiciendis doloremque cum 
-        eius alias aut aspernatur excepturi.</p>
+        <h3>Anti-Aging and Renewal Treatment</h3>
+        <p style="text-align: justify">Powerful retexturising to
+        sitmulate cell renewal for dry, dull skin and wrinkles
+        caused by damaging UV and environmental assault.
+        <br><br></p>
         <button id="closeModal1">Close</button>
       </div>
     </div>
     <div class="modal2" id="modal2">
       <div class="modalContent">
-        <h3>Treatment 2</h3>
-        <p style="text-align: justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-          Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <h3>Serenity Skin Repair Treatment</h3>
+        <p style="text-align: justify">Effectively targets 
+        dehydrated skin with mild sensitivity. It helps
+        strengthen the skin's natural defense, restore
+        moisture and speed up skin healing process.
+        <br><br> </p>
         <button id="closeModal2">Close</button>
       </div>
     </div>
