--- a/waxing.html
+++ b/waxing.html
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
   <style>
     body{
-      background-image: url('facialtreatmentbackground.png');
+      background-image: url('waxBanner.png');
       background-repeat: no-repeat;
       background-attachment: scroll;
       background-position: top; 
@@ -63,6 +63,7 @@
       opacity: 0;
       transition: all 0.3s ease-in-out;
       z-index: -1;
+      color: black;
 
       display: flex;
       justify-content: center;
@@ -78,6 +79,7 @@
       opacity: 0;
       transition: all 0.3s ease-in-out;
       z-index: -1;
+      color: black;
 
       display: flex;
       justify-content: center;
@@ -131,7 +133,7 @@
   <section class="services-catalog">
     <div class="description-box">
       <h2 style="font-size: 1.5em;">Waxing:</h2>
-      <p style="text-align: justify">Lorem ipsum dolor sit amet. Aut sunt sint aut 
+      <p>Lorem ipsum dolor sit amet. Aut sunt sint aut 
         quis accusamus eum galisum saepe sed internos quas. 
         Nam soluta molestiae in similique veritatis At omnis 
         cupiditate quo omnis assumenda ut obcaecati laudantium 
@@ -141,46 +143,55 @@
         eius alias aut aspernatur excepturi.</p>
     </div> 
     <div class="services-list">
-      <div class="service-card-catalog" style="--service-img: url('#')">
-        <h3>Treatment 1</h3>
-        <button class="service-link-catalog" id="openModal1">More About This Product</button>
+      <div class="service-card-catalog" style="--service-img: url('bodyWax.png')">
+        <h3>Body Wax</h3>
+        <button class="service-link-catalog" id="openModal1">Body Wax Catalog</button>
       </div>
-      <div class="service-card-catalog" style="--service-img: url('#')">
-        <h3>Treatment 2</h3>
-        <button class="service-link-catalog" id="openModal2">More About This Product</button>
+      <div class="service-card-catalog" style="--service-img: url('faceWax.png')">
+        <h3>Face Wax</h3>
+        <button class="service-link-catalog" id="openModal2">Face Wax Catalog</button>
       </div>
-      <div class="service-card-catalog" style="--service-img: url('#')">
-        <h3>Treatment 3</h3>
-        <button class="service-link-catalog" id="openModal3">More About This Product</button>
+      <div class="service-card-catalog" style="--service-img: url('bikiniWax.png')">
+        <h3>Bikini Wax</h3>
+        <button class="service-link-catalog" id="openModal3">Bikini Wax Catalog</button>
       </div>
     </div>
     <div class="modal1" id="modal1">
       <div class="modalContent">
-        <h3>Treatment 1</h3>
-        <p style="text-align: justify">Lorem ipsum dolor sit amet. Aut sunt sint aut 
-        quis accusamus eum galisum saepe sed internos quas. 
-        Nam soluta molestiae in similique veritatis At omnis 
-        cupiditate quo omnis assumenda ut obcaecati laudantium 
-        sed molestiae nihil et nulla ratione. Eos voluptates magnam 
-        non numquam tempore ut consequuntur laborum. Qui accusamus 
-        eaque et laboriosam excepturi et reiciendis doloremque cum 
-        eius alias aut aspernatur excepturi.</p>
+        <h3>Body Wax</h3>
+        <p>
+          Half Leg Wax: CHF.- 70<br><br>
+          Full Leg Wax: CHF.- 90<br><br>
+          Arms to Elbow Wax: CHF.- 50<br><br>
+          Full Arm Wax: CHF.- 70<br><br>
+          Armpit Wax: CHF.- 49<br><br>
+          Partial Back Wax: CHF.- 59<br><br>
+          Full Back Wax: CHF.- 78<br><br>
+          Chest and Abdomen Wax: CHF.- 89<br>
+        </p>
         <button id="closeModal1">Close</button>
       </div>
     </div>
     <div class="modal2" id="modal2">
       <div class="modalContent">
-        <h3>Treatment 2</h3>
-        <p style="text-align: justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-          Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <h3>Face Wax</h3>
+        <p>
+          Full Face Wax: CHF.- 54<br><br>
+          Upper Lip Wax: CHF.- 20<br><br>
+          Chin Wax: CHF.- 20<br><br>
+          Upper Lip and Chin Wax: CHF.- 38<br>
+        </p>
         <button id="closeModal2">Close</button>
       </div>
     </div>
     <div class="modal3" id="modal3">
       <div class="modalContent">
-        <h3>Treatment 3</h3>
-        <p style="text-align: justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-          Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <h3>Bikini Wax</h3>
+        <p>
+          Bikini Wax: CHF.- 60<br><br>
+          Brazilian Wax without buttock fold: CHF.- 70<br><br>
+          Bazilian Wax with buttock fold: CHF.- 85<br>
+        </p>
         <button id="closeModal3">Close</button>
       </div>
     </div>
