--- a/waxing.html
+++ b/waxing.html
@@ -132,15 +132,19 @@
 
   <section class="services-catalog">
     <div class="description-box">
-      <h2 style="font-size: 1.5em;">Waxing:</h2>
-      <p>Lorem ipsum dolor sit amet. Aut sunt sint aut 
-        quis accusamus eum galisum saepe sed internos quas. 
-        Nam soluta molestiae in similique veritatis At omnis 
-        cupiditate quo omnis assumenda ut obcaecati laudantium 
-        sed molestiae nihil et nulla ratione. Eos voluptates magnam 
-        non numquam tempore ut consequuntur laborum. Qui accusamus 
-        eaque et laboriosam excepturi et reiciendis doloremque cum 
-        eius alias aut aspernatur excepturi.</p>
+      <h2 style="font-size: 1.5em;">Waxing Services</h2>
+      <p>
+        Our waxing treatments offer smooth, long-lasting results 
+        while caring for your skin. We use a special homemade wax 
+        made from natural ingredients, which helps reduce irritation 
+        and is gentle even on sensitive skin.
+        <br><br>
+        Whether you're looking to shape your eyebrows, remove unwanted 
+        facial hair, or get body waxing, our skilled technicians 
+        ensure a precise and comfortable experience. We focus on hygiene, 
+        safety, and client comfort, so you can relax knowing you're in 
+        expert hands.
+      </p>
     </div> 
     <div class="services-list">
       <div class="service-card-catalog" style="--service-img: url('bodyWax.png')">
