--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
       </div>
       <div class="service-card" style="--service-img: url('eyebrowIllustration.png')">
         <h3>Eyebrow Permanent Makeup</h3>
-        <a href="eyebrow permanent makeup.hmtl" class="service-link">More Information</a>
+        <a href="eyebrow permanent makeup.html" class="service-link">More Information</a>
       </div>
       <div class="service-card" style="--service-img: url('menIllustration.jpg')">
         <h3>Man Grooming</h3>
-        <a href="man grooming.html" class="service-link">More Information</a>
+        <a href="men section.html" class="service-link">More Information</a>
       </div>
     </div>
   </section>
