--- a/eyebrow permanent makeup.html
+++ b/eyebrow permanent makeup.html
@@ -120,7 +120,7 @@
           <a href="eyelash extension.html">Eyelash Extension</a>
           <a href="waxing.html">Waxing</a>
           <a href="#">Eyebrow Permanent Makeup</a>
-          <a href="men section.html">Man Grooming</a>
+          <a href="men section.html">Men Section</a>
         </div>
       </div>
       <a href="contact.html">Contact</a>
