--- a/eyelash extension.html
+++ b/eyelash extension.html
@@ -162,7 +162,7 @@
           <a href="#">Eyelash Extension</a>
           <a href="waxing.html">Waxing</a>
           <a href="eyebrow permanent makeup.html">Eyebrow Permanent Makeup</a>
-          <a href="men section.html">Man Grooming</a>
+          <a href="men section.html">Men Section</a>
         </div>
       </div>
       <a href="contact.html">Contact</a>
