--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a href="eyelash extension.html">Eyelash Extension</a>
           <a href="waxing.html">Waxing</a>
           <a href="eyebrow permanent makeup.html">Eyebrow Permanent Makeup</a>
-          <a href="men section.html">Man Grooming</a>
+          <a href="men section.html">Men Section</a>
         </div>
       </div>
       <a href="contact.html">Contact</a>
@@ -82,7 +82,7 @@
         <a href="eyebrow permanent makeup.html" class="service-link">More Information</a>
       </div>
       <div class="service-card" style="--service-img: url('menIllustration.jpg')">
-        <h3>Man Grooming</h3>
+        <h3>Men Section</h3>
         <a href="men section.html" class="service-link">More Information</a>
       </div>
     </div>
