--- a/waxing.html
+++ b/waxing.html
@@ -122,7 +122,7 @@
           <a href="eyelash extension.html">Eyelash Extension</a>
           <a href="#">Waxing</a>
           <a href="eyebrow permanent makeup.html">Eyebrow Permanent Makeup</a>
-          <a href="men section.html">Man Grooming</a>
+          <a href="men section.html">Men Section</a>
         </div>
       </div>
       <a href="contact.html">Contact</a>
