--- a/facial treatment.html
+++ b/facial treatment.html
@@ -146,11 +146,11 @@
         complexion designed to enhance your natural beauty.</p>
     </div> 
     <div class="services-list">
-      <div class="service-card-catalog" style="--service-img: url('#')">
+      <div class="service-card-catalog" style="--service-img: url('rejuvinate.png')">
         <h3>Anti-Aging and Renewal Treatment</h3>
         <button class="service-link-catalog" id="openModal1">More About This Product</button>
       </div>
-      <div class="service-card-catalog" style="--service-img: url('#')">
+      <div class="service-card-catalog" style="--service-img: url('tighten.png')">
         <h3>Serenity Skin Repair Treatment</h3>
         <button class="service-link-catalog" id="openModal2">More About This Product</button>
       </div>
