--- a/eyelash extension.html
+++ b/eyelash extension.html
@@ -193,23 +193,23 @@
       </p>
     </div> 
     <div class="services-list">
-      <div class="service-card-catalog" style="--service-img: url('#')">
+      <div class="service-card-catalog" style="--service-img: url('naturalLash.png')">
         <h3>Natural Lash</h3>
         <button class="service-link-catalog" id="openModal1">More About This Product</button>
       </div>
-      <div class="service-card-catalog" style="--service-img: url('#')">
+      <div class="service-card-catalog" style="--service-img: url('glamourLash.png')">
         <h3>Glamour Lash</h3>
         <button class="service-link-catalog" id="openModal2">More About This Product</button>
       </div>
-      <div class="service-card-catalog" style="--service-img: url('#')">
+      <div class="service-card-catalog" style="--service-img: url('hybridLash.png')">
         <h3>Hybrid Lash</h3>
         <button class="service-link-catalog" id="openModal3">More About This Product</button>
       </div>
-      <div class="service-card-catalog" style="--service-img: url('#')">
+      <div class="service-card-catalog" style="--service-img: url('mascaraLash.png')">
         <h3>Mascara Look Lash</h3>
         <button class="service-link-catalog" id="openModal4">More About This Product</button>
       </div>
-      <div class="service-card-catalog" style="--service-img: url('#')">
+      <div class="service-card-catalog" style="--service-img: url('lashLift.png')">
         <h3>Lash Lifting</h3>
         <button class="service-link-catalog" id="openModal5">More About This Product</button>
       </div>
