--- a/eyelash extension.html
+++ b/eyelash extension.html
@@ -172,7 +172,7 @@
 
   <section class="services-catalog">
     <div class="description-box">
-      <h2 style="font-size: 1.5em;">Eyelash Extension:</h2>
+      <h2 style="font-size: 1.5em;">Eyelash Extension Services</h2>
       <p style="text-align: justify">We specialize in eyelash extensions 
         that enhance your natural beauty with precision and care. Our range of 
         styles from natural to hybrid to full glamour, which are expertly tailored to 
