--- a/facial treatment.html
+++ b/facial treatment.html
@@ -132,9 +132,9 @@
 
   <section class="services-catalog">
     <div class="description-box">
-      <h2 style="font-size: 1.5em;">Facial Treatment:</h2>
+      <h2 style="font-size: 1.5em;">Facial Treatment Services</h2>
       <p style="text-align: justify">Our effective treatments are thoughtfully 
-        formulated to address your skin’s unique needs—from detoxifying and 
+        formulated to address your skin's unique needs—from detoxifying and 
         brightening to hydrating and anti-aging—helping you achieve optimal skin health.
         <br><br>
         <b>Dermalogica Facial Benefits</b>
