--- a/men section.html
+++ b/men section.html
@@ -130,7 +130,7 @@
 
   <section class="services-catalog">
     <div class="description-box">
-      <h2 style="font-size: 1.5em;">Men Section:</h2>
+      <h2 style="font-size: 1.5em;">Men Section Services</h2>
       <p style="text-align: justify">Lorem ipsum dolor sit amet. Aut sunt sint aut 
         quis accusamus eum galisum saepe sed internos quas. 
         Nam soluta molestiae in similique veritatis At omnis 
